--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "paulorobertfilho <paulorobert.filho@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon src/index.js"
   },
   "devDependencies": {
     "eslint": "^6.4.0",
@@ -17,5 +17,9 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "nodemon": "^1.19.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "nunjucks": "^3.2.0"
   }
 }
