--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "sequelize-cli": "^5.5.1"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "nunjucks": "^3.2.0"
+    "nunjucks": "^3.2.0",
+    "sequelize": "^5.19.0"
   }
 }
